# ICGN_CUDA

./: CDispOptICGN.cu  CDispOptICGN.cuh  CMakeLists.txt  disp_optimize_icgn.cu  disp_optimize_icgn.cuh  disp_optimize_icgn_cpu.cpp  disp_optimize_icgn_cpu.cu  disp_optimize_icgn_cpu.h  main.cpp  main.cu  readme.md
